--- a/config/locales/devise.fr.yml
+++ b/config/locales/devise.fr.yml
@@ -9,7 +9,7 @@ fr:
     failure:
       already_authenticated: "Vous êtes déjà connecté"
       inactive: "Votre compte n'est pas encore activé."
-      invalid: "Email ou mot de passe incorrect."
+      invalid: "Email ou mot de passe invalide."
       last_attempt: "Vous avez droit à une tentative avant que votre compte ne soit verrouillé."
       locked: "Votre compte est verrouillé."
       not_found_in_database: "Email ou mot de passe invalide."
