--- a/config/locales/devise.fr.yml
+++ b/config/locales/devise.fr.yml
@@ -8,7 +8,7 @@ fr:
       send_paranoid_instructions: 'Si votre e-mail existe dans notre base de données, vous allez bientôt recevoir un e-mail contenant les instructions de confirmation de votre compte.'
     failure:
       already_authenticated: "Vous êtes déjà connecté"
-      inactive: "Votre compte n'est pas encore activé."
+      inactive: "Votre compte est inactif !"
       invalid: "Email ou mot de passe invalide."
       last_attempt: "Vous avez droit à une tentative avant que votre compte ne soit verrouillé."
       locked: "Votre compte est verrouillé."
